--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,7 +17,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -e .
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -28,5 +27,5 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest tests/*.py
+        python3 -m pytest tests/*.py
     
